4th commit adding a doctor dash board